# agent-v-agent

./: .gitignore  CHANGES.md  README.md  SETUP_REPLAY_SQL.md  add_missing_agent_columns.sql  update_match_to_replay.sql
claude/1/: README.md  agentRunner.js  package.json  schema.sql
contract/: Anchor.toml  package.json
contract/programs/prediction_pot/: Cargo.toml
contract/programs/prediction_pot/src/: lib.rs
contract/scripts/: cli.ts  demo.ts  houseCounterparty.ts  resetDemo.ts
contract/test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
contract/tests/: prediction_pot.ts
docs/: prompt-engineering-research.md  strategy-factor-mapping.md  validation-failure-handling.md
frontend/: DATABASE_SCHEMA.md  GAME_INTEGRATION_COMPLETE.md  GAME_INTEGRATION_SETUP.md  SETUP_MATCHES_PURSE.md  eslint.config.mjs  middleware.ts  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: agent-chart.tsx  auth-form.tsx  header.tsx  (+4 more)
server/: .env.example  .gitignore  README.md  add_match_clocks.sql  add_missing_trade_columns.sql  add_trade_tx_signature_column.sql  fra-esp-logs.txt  market-authority-keypair.json  package-lock.json  package.json  schema.sql  schema_solana.sql  txline-devnet-keypair.json
sql-files/: 007_ticks_granular.sql  008_purse_to_sol.sql  009_add_match_minute_to_trades.sql  010_add_initial_purse_to_matches.sql  add_replay_support_to_matches.sql  add_team_names_to_matches.sql  create_games_table.sql  drop_dead_agent_columns.sql  enable_realtime.sql
(+110 files in other folders)
