[package]
name = "prediction_pot"
version = "0.1.0"
description = "Simplest possible parimutuel prediction pot on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_pot"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "1.1.2"
